developing on aws ec2, updated docker file and settings.py to allow traffic/hosting on this machine

--- a/recipe/Dockerfile
+++ b/recipe/Dockerfile
@@ -6,10 +6,10 @@ ENV PYTHONUNBUFFERED 1
 WORKDIR /api
 
 ADD . /api/
-
-RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
+# https://stackoverflow.com/questions/10919569/install-a-module-using-pip-for-specific-python-version
+RUN python3.11 -m pip install --upgrade pip
+RUN python3.11 -m pip install -r requirements.txt
 
 EXPOSE 8000
 
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["python3.11", "manage.py", "runserver", "0.0.0.0:8000"]
